# I-Architect

./: .claudeignore  .gitignore  .mcp.json  AGENTS.md  Ingestion_Plan.md  Orchestrator_PRD_v1.md  PDF_Reporting.md  RAA_Plan.md  README.md  REQUIRES_REVISINGOrchestrator_Plan.md  REQUIRES_REVISING_AGA_Plan.md  REQUIRES_REVISING_SA_Plan.md  References&Credits.md  UI_Plan.md  download_model.bat  download_model.sh  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
ARLO_Original/: readme.md
ARLO_Original/Research.DiscArch.Console/: Program.cs  RequirementBasedExperiment.cs
I_Architect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Skills/RAA/: SKILL.MD
aga/: AGA_PRD.md  Phase-1-foundation.md  Phase-2-tools.md  Phase-3-skills-prompts.md  Phase-4-nodes.md  Phase-5-agent-graph.md  Phase-6-integration.md  __init__.py  agent.py  arch_model_test_result-1.json  config.py  graph.py  normaliser.py  prompt_renderer.py  queue_builder.py  rewrite_mcp.py  schemas.py  temp_apply.json
arlo/: __init__.py  llm.py  pipeline_wrapper.py  runner.py
data/: KaggleReq.json  matrix.json  requirements.json
documentation_resources/: docs_index.json  technologies_versions.txt
fa/: Ingestion_PRD_Phase1.md  Ingestion_PRD_Phase10.md  Ingestion_PRD_Phase2.md  Ingestion_PRD_Phase3.md  Ingestion_PRD_Phase4.md  Ingestion_PRD_Phase5.md  Ingestion_PRD_Phase6.md  Ingestion_PRD_Phase7.md  Ingestion_PRD_Phase8.md  Ingestion_PRD_Phase9.md
i-architect/: .env.example  docker-compose.yml
ingestion/: exceptions.py  extractors.py  normaliser.py  rfa.py
notebooks/: run_arlo.ipynb
raa/: __init__.py  graph.py  langgraph.json  llm.py  logging.py  main.py  raa_module_specification.md  runner.py  state.py  studio_graph.py  studio_input_from_test_raa.json  types.py  validators.py
requirements_examples/: KaggleReq.txt  convert_to_json.sh
sa/: Phase1_Foundation_Pipeline_Skeleton.md  Phase2_Traceability_Axes.md  Phase3_SAAM_Diagram_Verification.md  Phase4_Executive_Reporting.md  SA_PRD.md  arch_model_test_result.json  run_tests.py  test_errors.py
shared/: __init__.py  merge.py  types.py
test_project/: run_arlo.ipynb  test_aga.ipynb  test_diagram_rendering.ipynb  test_ingestion.ipynb  test_raa.ipynb
tests/: conftest.py  test_graph_output_integrity.py
(+8672 files in other folders)
