[project]
name = "I-Architect"
version = "1.0"
description = "I-Architect - Generative AI for Software Engineering Architecture Diagrams"
requires-python = ">=3.11"

dependencies = [
    "langgraph==1.2.0",
    " langchain==1.3.0",
    "langgraph-checkpoint-sqlite==3.0.3",
    "mip>=1.17",
    "fastembed==0.8.0",
    "pydantic==2.13.0",
    "python-dotenv==1.2.2",
    "chevron==0.14",
    "scikit-learn==1.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arlo*"]
